# doom-fire-c-cmake

./: .clang-format  CMakeLists.txt  fire-engine.c  fire-engine.h  fire-palette.c  fire-palette.h  fire-renderer-sdl.c  main.c  readme.md
src/: CMakeLists.txt  fire-engine.c  fire-engine.h  fire-palette.c  fire-palette.h  fire-renderer-sdl.c  fire-renderer-sdl.h  fire-renderer.h  main.c
src/renderers/: CMakeLists.txt  fire-renderer-curses.c  fire-renderer-curses.h  fire-renderer-sdl.c  fire-renderer-sdl.h  fire-renderer-text.c  fire-renderer-text.h
